--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="theme-color" content="#1e3c72"/>
+    <title>Typing Speed Game</title>
+    <meta name="description" content="A modern typing speed game with multiple difficulties, works on all browsers and devices." />
+    <link rel="icon" href="https://fav.farm/⚡" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
